Added js und jpg files to website

--- a/teilnehmer/website/index.html
+++ b/teilnehmer/website/index.html
@@ -6,6 +6,12 @@
   </head>
   <body>
     <h1>Meine Webseite</h1>
-    <p>Hier sollte der richtige Inhalt sein...</p>
+    <p>
+      Uhrzeit: <span id="zeit">?</span>
+    </p>
+    <p>Das bin ich:
+      <img id="logo" src="johannes.jpg"/>
+    </p>
+    <script src="main.js"></script>
   </body>
 </html>
