Added atom packages

--- a/teilnehmer/website/index.html
+++ b/teilnehmer/website/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Meine Webseite</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css"></link>
   </head>
   <body>
     <h1>Meine Webseite</h1>
