Changed charset in step 7 of Lektion 1

--- a/teilnehmer/Lektion1-HTML/7-Bilder.html
+++ b/teilnehmer/Lektion1-HTML/7-Bilder.html
@@ -14,23 +14,23 @@
     <img src="wasserfall.jpg"> </td>
 
     <p>
-      Du kannst auch die Gr&ouml;&szlig;e ver&auml;ndern:
+      Du kannst auch die Größe verändern:
     </p>
 
     <img src="wasserfall.jpg" width="50"> </td>
 
     <p>
-      <h3>Grafiken k&ouml;nnen auch im Text auftauchen</h3>
+      <h3>Grafiken können auch im Text auftauchen</h3>
     </p>
 
     <p>
       Minecraft ist ein Open-World-Spiel ohne ein fest vorgegebenes
       Spielziel. Das Hauptaugenmerk liegt auf der Erkundung
-      <img align="left" src="minecraft.jpg"> und Entdeckung der von H&ouml;hlen und Dungeons durchzogenen
-      Spielwelt sowie dem Bau eigener Geb&auml;ude und Vorrichtungen.
+      <img align="left" src="minecraft.jpg"> und Entdeckung der von Höhlen und Dungeons durchzogenen
+      Spielwelt sowie dem Bau eigener Gebäude und Vorrichtungen.
       Der Spieler kann Rohstoffe abbauen, diese zu anderen Gegenständen
-      weiterverarbeitenund gegen Monster k&auml;mpfen. In Minecraft
-      gibt es haupts&auml;chlich zwei Spielmodi: den &Uuml;berlebensmodus,
+      weiterverarbeitenund gegen Monster kämpfen. In Minecraft
+      gibt es hauptsächlich zwei Spielmodi: den Überlebensmodus,
       in dem der Spieler Ressourcen sammeln muss und eine Gesundheitsleiste
       hat, und den Kreativ-Modus, in dem es keine Gesundheit
       gibt und dem Spieler unbegrenzte Mengen an Ressourcen zur
