--- a/teilnehmer/Lektion1-HTML/4-AbsaetzeUndZeilenumbrueche.html
+++ b/teilnehmer/Lektion1-HTML/4-AbsaetzeUndZeilenumbrueche.html
@@ -1,12 +1,14 @@
 <html>
 
   <head>
-    <title>Abs&auml;tze und Zeilenumbr&uuml;che</title>
+    <title>Absätze und Zeilenumbrüche</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></meta>
   </head>
 
   <body>
     <p>Text wird im Body-Bereich platziert.</p>
-    <p>Abs&auml;tze besitzen zueinander einen gewissen Abstand, in etwa eine Leerzeile.</p>
+    <p>Absätze besitzen zueinander einen gewissen Abstand, in etwa
+      eine Leerzeile.</p>
     <p>Allerdings kannst du auch innerhalb eines Absatzes
       <br/> einen Zeilenumbruch erzwingen!
       <br/> Das war's!
