--- a/teilnehmer/Lektion1-HTML/5-Ueberschriften.html
+++ b/teilnehmer/Lektion1-HTML/5-Ueberschriften.html
@@ -1,16 +1,17 @@
 <html>
 
   <head>
-    <title>&Uuml;berschriften</title>
+    <title>Überschriften</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></meta>
   </head>
 
   <body>
-    <h1>Eine &Uuml;berschrift der Gr&ouml;&szlig;e 1</h1>
-    <h2>Eine &Uuml;berschrift der Gr&ouml;&szlig;e 2</h2>
-    <h3>Eine &Uuml;berschrift der Gr&ouml;&szlig;e 3</h3>
-    <h4>Eine &Uuml;berschrift der Gr&ouml;&szlig;e 4</h4>
-    <h5>Eine &Uuml;berschrift der Gr&ouml;&szlig;e 5</h5>
-    <h6>Eine &Uuml;berschrift der Gr&ouml;&szlig;e 6</h6>
+    <h1>Eine Überschrift der Größe 1</h1>
+    <h2>Eine Überschrift der Größe 2</h2>
+    <h3>Eine Überschrift der Größe 3</h3>
+    <h4>Eine Überschrift der Größe 4</h4>
+    <h5>Eine Überschrift der Größe 5</h5>
+    <h6>Eine Überschrift der Größe 6</h6>
   </body>
 
 </html>
