--- a/teilnehmer/Lektion1-HTML/6-Zeichenformatierungen.html
+++ b/teilnehmer/Lektion1-HTML/6-Zeichenformatierungen.html
@@ -2,6 +2,7 @@
 
   <head>
     <title>Zeichenformatierungen</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></meta>
   </head>
 
   <body>
@@ -17,7 +18,7 @@
       <br/>
     </p>
     <p>
-      <b><i><u>Die Formatierungen k&ouml;nnen auch kombiniert werden!</u></i></b>
+      <b><i><u>Die Formatierungen können auch kombiniert werden!</u></i></b>
     </p>
   </body>
 
