--- a/teilnehmer/Lektion1-HTML/3-Sonderzeichen.html
+++ b/teilnehmer/Lektion1-HTML/3-Sonderzeichen.html
@@ -2,8 +2,7 @@
 
   <head>
     <title>Sonderzeichen</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></meta>
   </head>
 
   <body>
@@ -39,8 +38,8 @@
     </p>
 
     <p>
-      Wenn der &lt;head&gt;-Bereich einer Seite die folgende Zeile enthält, dann musst du
-      manche Zeichen nicht mehr kodieren:
+      Wenn der &lt;head&gt;-Bereich einer Seite die folgende Zeile
+      enthält, dann musst du manche Zeichen nicht mehr kodieren:
       <pre>
         &lt;meta http-equiv="Content-Type" content="text/html; charset=utf-8"&gt;&lt;/meta&gt;
       </pre>
