--- a/teilnehmer/Lektion1-HTML/7-Bilder.html
+++ b/teilnehmer/Lektion1-HTML/7-Bilder.html
@@ -17,11 +17,9 @@
       Du kannst auch die Größe verändern:
     </p>
 
-    <img src="wasserfall.jpg" width="50"> </td>
+    <img src="wasserfall.jpg" width="300" height="100"> </td>
 
-    <p>
-      <h3>Grafiken können auch im Text auftauchen</h3>
-    </p>
+    <h3>Grafiken im Text</h3>
 
     <p>
       Minecraft ist ein Open-World-Spiel ohne ein fest vorgegebenes
@@ -35,6 +33,12 @@
       hat, und den Kreativ-Modus, in dem es keine Gesundheit
       gibt und dem Spieler unbegrenzte Mengen an Ressourcen zur
       Verfügung stehen.
+    </p>
+
+    <h3>Animierte GIFs</h3>
+
+    <p>
+      <img src="ani_lampe.gif" width="100"><img>
     </p>
 
   </body>
