--- a/teilnehmer/Lektion1-HTML/3-Sonderzeichen.html
+++ b/teilnehmer/Lektion1-HTML/3-Sonderzeichen.html
@@ -1,8 +1,8 @@
 <html>
 
   <head>
+    <meta charset='utf-8'/>
     <title>Sonderzeichen</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></meta>
   </head>
 
   <body>
@@ -41,7 +41,7 @@
       Wenn der &lt;head&gt;-Bereich einer Seite die folgende Zeile
       enthält, dann musst du manche Zeichen nicht mehr kodieren:
       <pre>
-        &lt;meta http-equiv="Content-Type" content="text/html; charset=utf-8"&gt;&lt;/meta&gt;
+        &lt;meta charset=utf-8"/&gt;
       </pre>
       Unter anderem: ä ö ü Ä Ö Ü ß
     </p>
