--- a/teilnehmer/Lektion1-HTML/7-Bilder.html
+++ b/teilnehmer/Lektion1-HTML/7-Bilder.html
@@ -1,8 +1,8 @@
 <html>
 
   <head>
+    <meta charset='utf-8'/>
     <title>Bilder und Grafiken</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></meta>
   </head>
 
   <body>
