--- a/teilnehmer/Lektion1-HTML/8-Hyperlinks.html
+++ b/teilnehmer/Lektion1-HTML/8-Hyperlinks.html
@@ -1,8 +1,8 @@
 <html>
 
   <head>
+    <meta charset='utf-8'/>
     <title>Hyperlinks</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></meta>
   </head>
 
   <body>
