Lektion 2 index.html

--- a/teilnehmer/Lektion2-CSS/index.html
+++ b/teilnehmer/Lektion2-CSS/index.html
@@ -6,12 +6,14 @@
     <style>
       body {
         background-color: lightgray;
+        font-family: Arial;
       }
     </style>
     <title>Ein Titel</title>
   </head>
 
   <body>
+    Dies ist ein Text.
   </body>
 
 </html>
