Falsche Spiegel URL korrigiert

--- a/teilnehmer/Lektion1-HTML/8-Hyperlinks.html
+++ b/teilnehmer/Lektion1-HTML/8-Hyperlinks.html
@@ -22,7 +22,7 @@
 
     <p>
       <a href="http://coderdojohd.github.com">coderdojohd.github.com</a>
-      <br/> <a href="http://www.spiegel-online.de">www.spiegel-online.de</a>
+      <br/> <a href="http://www.spiegel.de">www.spiegel.de</a>
     </p>
 
     <h3>Hyperlinks zu eMail-Adressen:</h3>
