--- a/teilnehmer/Lektion1-HTML/8-Hyperlinks.html
+++ b/teilnehmer/Lektion1-HTML/8-Hyperlinks.html
@@ -28,7 +28,7 @@
     <h3>Hyperlinks zu eMail-Adressen:</h3>
 
     <p>
-      <a href="mailto:coderdojo@johanneslink.net">mailto:f.deberle@juvo.de</a>
+      <a href="mailto:coderdojo@johanneslink.net">mailto:coderdojo@johanneslink.net</a>
     </p>
 
     <h3>Hyperlinks auf Bilder und andere Dokumente:</h3>
