border-Attribute mit " statt '

--- a/teilnehmer/Lektion1-HTML/9-Tabellen.html
+++ b/teilnehmer/Lektion1-HTML/9-Tabellen.html
@@ -7,7 +7,7 @@
 
   <body>
 
-    <table border=1>
+    <table border="1">
       <tr>
         <td>Eine Tabelle aus nur einer Zelle</td>
       </tr>
@@ -15,7 +15,7 @@
 
     <br/>
 
-    <table border=1>
+    <table border="1">
       <tr>
         <td>Zeile 1 Zelle 1</td>
         <td>Zeile 1 Zelle 2</td>
