img-Tags korrigiert

--- a/teilnehmer/Lektion1-HTML/7-Bilder.html
+++ b/teilnehmer/Lektion1-HTML/7-Bilder.html
@@ -11,13 +11,13 @@
       So sieht ein Bild auf der Web-Seite aus:
     </p>
 
-    <img src="wasserfall.jpg"> </td>
+    <img src="wasserfall.jpg" />
 
     <p>
       Du kannst auch die Größe verändern:
     </p>
 
-    <img src="wasserfall.jpg" width="300" height="100"> </td>
+    <img src="wasserfall.jpg" width="300" height="100" />
 
     <h3>Grafiken im Text</h3>
 
@@ -38,7 +38,7 @@
     <h3>Animierte GIFs</h3>
 
     <p>
-      <img src="ani_lampe.gif" width="100"><img>
+      <img src="ani_lampe.gif" width="100" />
     </p>
 
   </body>
