Vereinheitlichte Schreibweise von <meta charset="utf-8" />

--- a/teilnehmer/Lektion2-CSS/3-ExternalStyling.html
+++ b/teilnehmer/Lektion2-CSS/3-ExternalStyling.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <meta charset='utf-8' />
+    <meta charset="utf-8" />
     <link rel="stylesheet" href="3-ExternalStyling.css" />
     <title>Externes Styling</title>
   </head>
