--- a/teilnehmer/Lektion1-HTML/4-AbsaetzeUndZeilenumbrueche.html
+++ b/teilnehmer/Lektion1-HTML/4-AbsaetzeUndZeilenumbrueche.html
@@ -1,7 +1,7 @@
 <html>
 
   <head>
-    <meta charset='utf-8'/>
+    <meta charset="utf-8" />
     <title>Absätze und Zeilenumbrüche</title>
   </head>
 
