--- a/teilnehmer/Lektion3-JavaScript/1-UhrzeitBeimLaden.html
+++ b/teilnehmer/Lektion3-JavaScript/1-UhrzeitBeimLaden.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <meta charset='utf-8' />
+    <meta charset="utf-8" />
     <link rel="stylesheet" href="main.css" />
     <title>JavaScript - Uhrzeit beim Laden</title>
   </head>
