Added simple funtionality to Taschenrechner

--- a/teilnehmer/Beispiel-Taschenrechner/index.html
+++ b/teilnehmer/Beispiel-Taschenrechner/index.html
@@ -13,8 +13,8 @@
     <div id="calculator">
       <!-- Screen and clear key -->
       <div class="top">
-        <span class="clear">C</span>
-        <div class="screen"></div>
+        <span id="clearButton" class="clear">C</span>
+        <div id="result" class="screen"></div>
       </div>
 
       <div class="keys">
