--- a/teilnehmer/Beispiel-Taschenrechner/index.html
+++ b/teilnehmer/Beispiel-Taschenrechner/index.html
@@ -14,23 +14,23 @@
       <!-- Screen and clear key -->
       <div class="top">
         <span id="clearButton" class="clear">C</span>
-        <div id="result" class="screen"></div>
+        <div id="display" class="screen"></div>
       </div>
 
       <div class="keys">
         <!-- operators and other keys -->
-        <span>7</span>
-        <span>8</span>
-        <span>9</span>
-        <span>4</span>
-        <span>5</span>
-        <span>6</span>
-        <span>1</span>
-        <span>2</span>
-        <span>3</span>
-        <span>0</span>
-        <span class="operator">+</span>
-        <span class="eval">=</span>
+        <span class="digit">7</span>
+        <span class="digit">8</span>
+        <span class="digit">9</span>
+        <span class="digit">4</span>
+        <span class="digit">5</span>
+        <span class="digit">6</span>
+        <span class="digit">1</span>
+        <span class="digit">2</span>
+        <span class="digit">3</span>
+        <span class="digit">0</span>
+        <span id="plusButton" class="operator">+</span>
+        <span id="evalButton" class="eval">=</span>
       </div>
     </div>
 
