Some website modifications

--- a/coderdojo.rechnerzeit.net/index.html
+++ b/coderdojo.rechnerzeit.net/index.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>CoderDojo Heidelberg - Projekte der Teilnehmer</title>
-  </head>
-  <body>
-    <h1>CoderDojo Heidelberg - Projekte der Teilnehmer</h1>
-    <p>
-      Die Projekte der Teilnehmer werden in eigenen Unterverzeichnissen deployt.
-      Bitte fragt dazu einen CoderDojo-Mentor.
-    </p>
-  </body>
+
+    <head>
+        <meta charset="utf-8" />
+        <link rel="stylesheet" href="main.css" />
+        <title>CoderDojo Heidelberg - Projekte der Teilnehmer</title>
+    </head>
+
+    <body>
+        <h1>CoderDojo Heidelberg - Projekte der Teilnehmer</h1>
+        <p>
+            Die Projekte der Teilnehmer werden in eigenen Unterverzeichnissen deployt. Bitte fragt dazu einen CoderDojo-Mentor.
+        </p>
+
+        <h2>Projekte von</h2>
+        <ul>
+            <li>
+                <a href="./johannes">Johannes</a>
+            </li>
+        </ul>
+
+        <h2>Beispiel-Apps</h2>
+        <ul>
+            <li>
+                <a href="./taschenrechner">Taschenrechner</a>
+            </li>
+        </ul>
+    </body>
+
 </html>
